# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import categoriesRouter from "./categories";
+import expensesRouter from "./expenses";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(categoriesRouter);
+router.use(expensesRouter);
+router.use(statsRouter);
 
 export default router;
